bk_ida/gccida/c2/move_deaths
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12337:4: error: expected ';' after expression
rtx v24; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12337:5: error: use of undeclared identifier 'v24'
rtx v24; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12343:4: error: expected ';' after expression
rtx v30; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12343:5: error: use of undeclared identifier 'v30'
rtx v30; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12345:4: error: expected ';' after expression
rtx v32; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12345:5: error: use of undeclared identifier 'v32'
rtx v32; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12372:6: error: use of undeclared identifier 'v59'
rtx *v59; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12373:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12373:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12377:4: error: expected ';' after expression
rtx v64; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12377:5: error: use of undeclared identifier 'v64'
rtx v64; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12381:6: error: use of undeclared identifier 'v68'
rtx *v68; // [rsp+28h] [rbp-40h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12382:4: error: expected ';' after expression
rtx v69; // [rsp+30h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12382:5: error: use of undeclared identifier 'v69'
rtx v69; // [rsp+30h] [rbp-38h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12387:1: error: use of undeclared identifier 'v68'
v68 = pnotes; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12388:1: error: use of undeclared identifier 'v64'
v64 = to_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12397:22: error: expected expression
move_deaths( *( rtx *)&x[1], maybe_kill_insn, from_cuid, to_insn, pnotes); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12427:11: error: use of undeclared identifier 'v64'
to_insn = v64; 
          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/combine.c:12428:10: error: use of undeclared identifier 'v68'
pnotes = v68; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_deaths/src/obj/combine.o] Error 1
